--- a/dynamic-excel-project/dynamic-excel/src/main/resources/ValidationMessages_ja.properties
+++ b/dynamic-excel-project/dynamic-excel/src/main/resources/ValidationMessages_ja.properties
@@ -1,1 +1,2 @@
 com.github.gn5r.dynamic.excel.validation.ByteSize.message={min} \u304b\u3089 {max} \u306e\u7bc4\u56f2\u3067\u5165\u529b\u3057\u3066\u304f\u3060\u3055\u3044
+com.github.gn5r.dynamic.excel.validation.List.NotEmpty.message=\u30ea\u30b9\u30c8\u306e\u8981\u7d20\u304c\u7a7a\u3067\u3059
